tests/neg/default-arg-in-refinement.scala
def foo[T <: AnyRef { def bar(a: Int = 0): Unit }](t: T): Unit = t.bar // error // error